<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.joblogic.presentation.MainViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.home.HomeFragment">

        <Button
            android:onClick="@{() -> viewmodel.showCallList()}"
            android:id="@+id/btnCallList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_list"
            app:layout_constraintBottom_toTopOf="@+id/btnBuyList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:onClick="@{() -> viewmodel.showBuyList()}"
            android:id="@+id/btnBuyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_list"
            app:layout_constraintBottom_toTopOf="@+id/btnSellList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCallList" />

        <Button
            android:onClick="@{() -> viewmodel.showSellList()}"
            android:id="@+id/btnSellList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sell_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBuyList" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>